# warp

./: .gitignore  README.md  Warp.sln
EstimateWeights/: EstimateWeights.cs  EstimateWeights.csproj  Options.cs
EstimateWeights/Properties/: AssemblyInfo.cs
Frankenmap/: Frankenmap.cs  Frankenmap.csproj  Options.cs  Program.cs  packages.config
Frankenmap/Properties/: AssemblyInfo.cs
GPUAcceleration/: Angles.cpp  Backprojection.cu  Bessel.cpp  BoxNet2.cu  CTF.cu  Comparison.cu  Correlation.cpp  CubeNet.cu  Cubic.cpp  CubicGPU.cu  Deconv.cu  Defects.cu  Device.cpp  EER.cpp  Einspline.cpp  FFT.cpp  FSC.cpp  Functions.h  GPUAcceleration.vcxproj  GPUAcceleration.vcxproj.filters  MPARefine.cu  Memory.cpp  PCA.cu  ParticleCTF.cu  ParticleMultiBody.cu  ParticleNMA.cu  ParticleShift.cu  ParticleSoftBody.cu  Polishing.cu  Post.cu  Projector.cpp  Raycast.cu  RealspaceProjection.cu  Shift.cu  SparseEigen.cpp  Symmetry.cpp  TiffNative.cpp  TomoRefine.cu  Tools.cu  WeightOptimization.cpp
GPUAcceleration/einspline/: Makefile.am  Makefile.in  bspline.h  bspline_base.h  bspline_create.cpp  bspline_create.h  bspline_data.c  bspline_eval_std_s.h  bspline_structs.h  bspline_structs_cuda.h  config.h  config.h.in  multi_bspline_create.c  multi_bspline_create_cuda.cu  multi_bspline_cuda_c_impl.h  multi_bspline_cuda_d_impl.h  multi_bspline_cuda_s_impl.h  multi_bspline_cuda_z_impl.h  multi_bspline_eval_c.h  multi_bspline_eval_cuda.h  multi_bspline_eval_cuda_c.cu  multi_bspline_eval_d.h  multi_bspline_eval_sse_c_impl.h  multi_bspline_eval_sse_d_impl.h  multi_bspline_eval_sse_s_impl.h  multi_bspline_eval_sse_z_impl.h  multi_bspline_eval_std_c_impl.h  multi_bspline_eval_std_d_impl.h  multi_bspline_eval_std_s_impl.h  multi_bspline_eval_std_z_impl.h  multi_bspline_structs_cuda.h  test_bspline_s.c  test_multi_cuda.cu  time_multi.c
M/: App.config  App.xaml  App.xaml.cs  M.csproj  MainWindow.xaml  MainWindow.xaml.cs  Options.cs  WarpOptions.cs  packages.config
M/Controls/: DialogRefinementSettings.xaml  DialogRefinementSettings.xaml.cs
M/Controls/Sociology/: SpeciesView.xaml  SpeciesView.xaml.cs
M/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Noise2Map/: App.config  Noise2Map.csproj  Options.cs  Program.cs  noise3noise_initialize.py  noise3noise_model.py
Noise2Map/Properties/: AssemblyInfo.cs
Noise2Particle/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Noise2Particle.csproj  estimator_v2.py  noise2particle_initialize.py  noise2particle_model.py  noise2particle_model.py.old  packages.config
Noise2Particle/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PCA3d/: App.config  Options.cs  PCA3d.csproj  Program.cs  packages.config
PCA3d/Properties/: AssemblyInfo.cs
TFUtility/: Functions.h  TFUtility.vcxproj  TFUtility.vcxproj.filters  graph.cpp
Warp/: Analytics.cs  App.config  App.xaml  App.xaml.cs  FileDiscoverer.cs  GlobalOptions.cs  IOQueue.cs  MainWindow.xaml  MainWindow.xaml.cs  MdocDiscoverer.cs  Options.cs  Warp - Copy.csproj  Warp.csproj  WebAPI.cs  packages.config
Warp/Controls/: CTFDisplay.xaml  FirstRunPrompt.xaml.cs  GridMiniature.xaml  GridMiniature.xaml.cs  LogMessageDisplay.xaml  LogMessageDisplay.xaml.cs  LogMessageGroup.xaml  MicrographDisplay.xaml  MicrographDisplay.xaml.cs  SingleAxisScatter.xaml.cs  StatusBar.xaml  StatusBar.xaml.cs
Warp/Controls/BoxNet/: BoxNetExport.xaml  BoxNetExport.xaml.cs  BoxNetSelect.xaml  BoxNetSelect.xaml.cs  BoxNetTrain.xaml  BoxNetTrain.xaml.cs
Warp/Controls/MainUI/: CTFDisplay.xaml  CTFDisplay.xaml.cs  DualAxisScatter.xaml  DualAxisScatter.xaml.cs  FirstRunPrompt.xaml  LogMessageGroup.xaml.cs  MicrographDisplay.xaml  MicrographDisplay.xaml.cs  SingleAxisScatter.xaml  SingleAxisScatter.xaml.cs  StatusBar.xaml  StatusBar.xaml.cs  StatusBarRow.xaml  StatusBarRow.xaml.cs  TiltDialItem.xaml  TiltDialItem.xaml.cs
Warp/Controls/ProgressIndicators/: FlatGridMiniature.xaml  FlatGridMiniature.xaml.cs  NyanBar.xaml  NyanBar.xaml.cs  OldschoolBar.xaml  OldschoolBar.xaml.cs  (+2 more)
Warp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
WarpControls/: Converters.cs  DropMenu.xaml  DropMenu.xaml.cs  EditableTextBlock.xaml  EditableTextBlock.xaml.cs  FormattedTextBlock.xaml  FormattedTextBlock.xaml.cs  MultiSliceRenderer.xaml  MultiSliceRenderer.xaml.cs  SingleSliceRenderer.xaml  SingleSliceRenderer.xaml.cs  SymmetrySelector.xaml  SymmetrySelector.xaml.cs  ValueSlider.xaml  ValueSlider.xaml.cs  VolumeRenderer.xaml  VolumeRenderer.xaml.cs  WarpControls.csproj  app.config  packages.config
WarpControls/ProgressIndicators/: NyanBar.xaml  NyanBar.xaml.cs  OldschoolBar.xaml  OldschoolBar.xaml.cs
WarpControls/Properties/: AssemblyInfo.cs
WarpLib/: BoxNet.cs  BoxNet2.cs  CPU.cs  CTF.cs  CubeNet.cs  Cubic1D.cs  Cubic1DShort.cs  CubicGrid.cs  FSC.cs  FlexNet3D.cs  GPU.cs  GPUQueue.cs  Image.cs  LinearGrid4D.cs  Movie - Copy.cs  Movie.backup  Movie.cs  NMAMap.cs  NoiseNet2D.cs  NoiseNet3D.cs  ProcessingOptions.cs  Projector.cs  SoftMap.cs  Star.cs  TiltSeries.cs  WarpBase.cs  WarpLib.csproj  WorkerWrapper.cs  packages.config
WarpLib/Headers/: DM4.cs  EER.cs  EM.cs  Headers.cs  MRC.cs  Raw.cs  Tiff.cs
WarpLib/Properties/: AssemblyInfo.cs
WarpLib/Sociology/: DataSource.cs  Particle.cs  Population.cs  Species.cs
WarpLib/TensorFlowSharp/: Tensorflow.cs
WarpLib/Tools/: BenchmarkTimer.cs  ByteReaderBE.cs  ClusterTrieste.cs  ColorScale.cs  DefectModel.cs  EERNative.cs  FloatVectors.cs  Helper.cs  HungarianAlgorithm.cs  IOHelper.cs  ImageHelper.cs  ImodHelper.cs  IntVectors.cs  Logger.cs  MathHelper.cs  Matrix3.cs  Matrix4.cs  NamedSerializableObject.cs  PhysicsHelper.cs  Quaternion.cs  RandomNormal.cs  Symmetry.cs  TFHelper.cs  TFHelper_serialize_configproto.py  TiffNative.cs  Timing.cs  XMLHelper.cs  Zernike.cs
WarpWorker/: App.config  Program.cs  WarpWorker.csproj
WarpWorker/Properties/: AssemblyInfo.cs
icon/: icon.max
imodproto/: align_patchtracking.com  newst_coarse.com  track_seededbeads.com  xcorr_coarse.com  xcorr_patchtracking.com
(+46 files in other folders)
